--- a/Web/Areas/Hub/Views/Dispatch/CreateDispatch.cshtml
+++ b/Web/Areas/Hub/Views/Dispatch/CreateDispatch.cshtml
@@ -79,7 +79,7 @@
                     @Html.LabelFor(model => model.SINumber)
                 </div>
                 <div class="controls">
-                    @if (!string.IsNullOrEmpty(Model.GIN))
+                    @if (!string.IsNullOrEmpty(Model.DispatchID.ToString()))
                     {
                         @Html.TextBoxFor(model => model.SINumber, new { Disabled = true })                        
                     }
@@ -168,7 +168,7 @@
                 @Html.LabelFor(model => model.CommodityChildID)
             </div>
             <div class="controls">
-                @if (!string.IsNullOrEmpty(Model.GIN))
+                @if (!string.IsNullOrEmpty(Model.DispatchID.ToString()))
                 {
                     @Html.TextBoxFor(model => model.ChildCommodity, new { Disabled = true })
                 }
@@ -193,7 +193,7 @@
                     @Html.LabelFor(model => model.UnitID)
                 </div>
                 <div class="controls">
-                    @if (!string.IsNullOrEmpty(Model.GIN))
+                    @if (!string.IsNullOrEmpty(Model.DispatchID.ToString()))
                     {
                         @Html.TextBoxFor(model => model.Unit, new {Disabled = true})
                     }
@@ -216,7 +216,7 @@
                     @Html.LabelFor(model => model.QuantityInUnit)
                 </div>
                 <div class="controls">
-                    @if (!string.IsNullOrEmpty(Model.GIN))
+                    @if (!string.IsNullOrEmpty(Model.DispatchID.ToString()))
                     {
                         @Html.TextBoxFor(model => model.QuantityInUnit, new {Disabled = true})
                     }
@@ -232,7 +232,7 @@
                     @Html.LabelFor(model => model.QuantityPerUnit,"Quantity in Qtl")
                 </div>
                 <div class="controls">
-                    @if (!string.IsNullOrEmpty(Model.GIN))
+                    @if (!string.IsNullOrEmpty(Model.DispatchID.ToString()))
                     {
                         @Html.TextBoxFor(model => model.QuantityPerUnit, new {Disabled = true})
                     }
@@ -247,7 +247,7 @@
                     @Html.LabelFor(model => model.Quantity,"Quantity in MT")
                 </div>
                   <div class="controls">
-                      @if (!string.IsNullOrEmpty(Model.GIN))
+                      @if (!string.IsNullOrEmpty(Model.DispatchID.ToString()))
                       {
                           @Html.TextBoxFor(model => model.Quantity, new {Disabled = true})
                       }
