--- a/Web/Areas/Hub/Views/ReceiveNew/Create.cshtml
+++ b/Web/Areas/Hub/Views/ReceiveNew/Create.cshtml
@@ -405,7 +405,7 @@
                                 <div class="form-group col-md-12">
                                     <div class="col-md-4 control-label">@Html.LabelFor(model => model.ResponsibleDonorId)</div>
                                     <div class="col-md-8">
-                                        @(Html.Kendo().ComboBoxFor(m => m.ResponsibleDonorId)
+                                        @*@(Html.Kendo().ComboBoxFor(m => m.ResponsibleDonorId)
                                               .Name("ResponsibleDonorId")
                                               .Placeholder("--Select Responsible Donor--")
                                               .DataTextField("Name")
@@ -415,6 +415,19 @@
                                               .DataSource(source => source.Read(read => read.Action("GetResponsibleDonor", "ReceiveNew"))
                                               )
                                         )
+                                        <span class="help-block"> @Html.ValidationMessageFor(model => model.ResponsibleDonorId)</span>*@
+                                        @(Html.Kendo().ComboBox()
+                                              .Name("ResponsibleDonorId")
+                                              .Placeholder("--Select Responsible Donor--")
+                                              .DataTextField("Name")
+                                              .DataValueField("DonorId")
+                                              .Filter(FilterType.Contains)
+                                              .HtmlAttributes(new { @class = "form-control" })
+                                              .DataSource(source => source.Read(read => read.Action("GetResponsibleDonor", "ReceiveNew")
+                                              .Data("filterStacks"))
+                                              .ServerFiltering(true))
+                                              .AutoBind(false)
+                                              .CascadeFrom("DonorId"))
                                         <span class="help-block"> @Html.ValidationMessageFor(model => model.ResponsibleDonorId)</span>
                                     </div>
                                 </div>
@@ -422,7 +435,7 @@
                                     <div class="col-md-4 control-label">@Html.LabelFor(model => model.SourceDonorId)</div>
                                     <div class="col-md-8">
                                         <span class="help-block"> @Html.ValidationMessageFor(model => model.SourceDonorId)</span>
-                                        @(Html.Kendo().ComboBoxFor(s => s.SourceDonorId)
+                                        @*@(Html.Kendo().ComboBoxFor(s => s.SourceDonorId)
                                               .Name("SourceDonorId")
                                               .Placeholder("--Select Source Donor--")
                                               .DataTextField("Name")
@@ -433,6 +446,19 @@
                                               )
                                       )
                                         )
+                                        <span class="help-block"> @Html.ValidationMessageFor(model => model.SourceDonorId)</span>*@
+                                        @(Html.Kendo().ComboBox()
+                                              .Name("SourceDonorId")
+                                              .Placeholder("--Select Source Donor--")
+                                              .DataTextField("Name")
+                                              .DataValueField("SourceDonorId")
+                                              .Filter(FilterType.Contains)
+                                              .HtmlAttributes(new { @class = "form-control" })
+                                              .DataSource(source => source.Read(read => read.Action("GetSourceDonor", "ReceiveNew")
+                                              .Data("filterStacks"))
+                                              .ServerFiltering(true))
+                                              .AutoBind(false)
+                                              .CascadeFrom("DonorId"))
                                         <span class="help-block"> @Html.ValidationMessageFor(model => model.SourceDonorId)</span>
 
                                     </div>
@@ -465,7 +491,7 @@
                             <div class="form-group col-md-12">
                                 <div class="col-md-4 control-label">@Html.LabelFor(model => model.TransporterId)</div>
                                 <div class="col-md-8">
-                                    @(Html.Kendo().ComboBoxFor(m => m.TransporterId)
+                                    @*@(Html.Kendo().ComboBoxFor(m => m.TransporterId)
                                        .Name("TransporterID")
                                        .Placeholder("--Select Transporter--")
                                        .DataTextField("Name")
@@ -477,7 +503,21 @@
                                        )
 
                                     )
+                                    <span class="help-block">@Html.ValidationMessageFor(model => model.TransporterId)</span>*@
+                                    @(Html.Kendo().ComboBox()
+                                       .Name("Transporter")
+                                       .Placeholder("--Select Transporter--")
+                                       .DataTextField("Name")
+                                       .DataValueField("TransporterId")
+                                       .Filter(FilterType.Contains)
+                                       .HtmlAttributes(new { @class = "form-control" })
+                                       .DataSource(source => source.Read(read => read.Action("GetTransporter", "ReceiveNew")
+                                       .Data("filterStacks"))
+                                       .ServerFiltering(true))
+                                       .AutoBind(false)
+                                       .CascadeFrom("TransporterId"))
                                     <span class="help-block">@Html.ValidationMessageFor(model => model.TransporterId)</span>
+
                                 </div>
                             </div>
                             <div class="form-group col-md-12">
