CATS-1348: unit Conversion for grid

--- a/Web/Views/Shared/EditorTemplates/UnitEditor.cshtml
+++ b/Web/Views/Shared/EditorTemplates/UnitEditor.cshtml
@@ -1,6 +1,7 @@
 ﻿@(Html.Kendo().DropDownList()
         .Name("UnitId")
-    .DataValueField("Id") 
+    .DataValueField("Id")
     .DataTextField("Name")
-    .BindTo((System.Collections.IEnumerable)ViewBag.Units) 
+    .Events(e => e.Change("onUnitChange"))
+    .BindTo((System.Collections.IEnumerable)ViewBag.Units)
 )
