CATS-1319 , Need Assessment plan approval functionality is modified. 'Approve' button is not visible when the need assessment plan has no need assessment.

--- a/Web/Areas/EarlyWarning/Views/NeedAssessment/Detail.cshtml
+++ b/Web/Areas/EarlyWarning/Views/NeedAssessment/Detail.cshtml
@@ -127,7 +127,7 @@ Plans
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
-                                <tbody>{}
+                                <tbody>
                                 
                                 @foreach (NeedAssessment item in Model)
                                 {
