CATS-1179: this fix enables the Reference No. to be printed on Payment Request Letter

--- a/Web/Areas/Logistics/Views/TransporterPaymentRequest/PaymentRequests.cshtml
+++ b/Web/Areas/Logistics/Views/TransporterPaymentRequest/PaymentRequests.cshtml
@@ -55,11 +55,11 @@
             $.ajax({
                 type: "POST",
                 url: finalurl, // replace with your actual controller and action
-                data: JSON.stringify({ transporterId: transporterId, refno: "", programname : "All"}),
+                data: JSON.stringify({ transporterId: transporterId, refno: refNo, programname : "All"}),
                 success: function(result) {
 
                     if (result == null || result == "") {
-                       // alert("Payement request is zero.");
+                        alert("Payement request is zero.");
                     } else {
                         //$('#result').html(result);
                         window.location.href = finalurl;
