CATS-1288 Added Current HRD to regional Dashboard

--- a/Web/Areas/Regional/Views/Home/Index.cshtml
+++ b/Web/Areas/Regional/Views/Home/Index.cshtml
@@ -563,6 +563,12 @@
                                     <i class=""></i>
                                     Age Percentage
                                 </h3>
+                                @* current plan ( if multiple plans exist in HRD Plan) *@
+                                <h3 style="text-align:left">
+                                    <i class=""></i>
+                               Current HRD:{{Census.AgeGroupPlanName}}   
+                                </h3>
+                               
                             </div>
 
                             <!-- /.portlet-header -->
