--- a/Web/Areas/EarlyWarning/Views/Request/Allocation.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Request/Allocation.cshtml
@@ -195,14 +195,10 @@
                     <td ng-show="allocation.showA">
                         <a ng-click="onFdpListShow($index)" id="fdp_selector_button{{$index}}" class="edit_button" href="javascript:_Void()">{{allocation.FDP}}</a>
                     </td>
-                    <!--<td>{{allocation.PlannedBeneficiaries}}</td>-->
-                    @*<td ng-show="allocation.showA">
-                        <input class="flat-input txt_beneficiaries" type="number" onfocus="onGridInputFocus(this)" onchange="onAllocationBeneficiaryChange({{allocation.Fdpid}}) ng-model="allocation.Beneficiaries"/>
-                    </td>*@
                     <td ng-show="allocation.showA">
-                        <input class="flat-input txt_beneficiaries" type="number" onfocus="onGridInputFocus(this)" min="0" oninput="validity.valid||(value='');" onchange="onAllocationBeneficiaryChange({{allocation.Fdpid}})" ng-model="allocation.Beneficiaries" />
+                        <input class="flat-input txt_beneficiaries" type="number" onfocus="onGridInputFocus(this)" min="0" oninput="validity.valid||(value='');" ng-change="onAllocatoinChange({{allocation.Fdpid}})" ng-model="allocation.Beneficiaries" />
                     </td>
-                    <td ng-show="allocation.showA"><button class="edit_button btn btn-danger" ng-click="deleteRequestedFDP($index)"><i class="icon-trash icon-white"></i> Delete</button></td>
+                    <td ng-show="allocation.showA"><button class="edit_button btn btn-danger" ng-click="deleteRequestedFDP(allocation)"><i class="icon-trash icon-white"></i> Delete</button></td>
 
                 </tr>
 
