CATS-1311: data entry status grid title changed

--- a/Web/Areas/Finance/Views/Home/Index.cshtml
+++ b/Web/Areas/Finance/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                 <div class="portlet-title">
                     <div class="caption font-green-sharp">
                         <i class="fa fa-credit-card font-green-sharp"></i>
-                        <span class="caption-subject bold uppercase"> Data Entry Status</span>
+                        <span class="caption-subject bold uppercase">Payment Request Process by User</span>
                         <span class="caption-helper">  </span>
                     </div>
                     <div class="tools">
